--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,229 +1,125 @@
-.main {
+.screen {
+  background-color: #F8F5FA;
+  height: 100vh;
+  overflow: scroll;
+}
+
+.container {
+  width: calc(100% - 2rem); 
+  max-width: 710px; 
+  min-width: 300px; 
+  margin: auto;
+  padding: 6rem 1rem; 
+  box-sizing: border-box; 
+}
+
+.textTitle {
+  color: #000;
+  font-size: calc(1.875em + 1vw); 
+  margin-top: 1.75rem;
+  text-align: left;
+  font-weight: normal;
+}
+
+.textBody {
+  color: #000;
+  font-size: calc(0.75em + 0.5vw); 
+  margin-top: 1.25rem;
+  text-align: left;
+  line-height: 1.6;
+}
+
+.textLink {
+  color: #000;
+  font-size: 1rem; 
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
+  gap: 0.675rem;
+  justify-content: left;
+  align-items: left;
+  margin-top: 2rem;
+  flex-wrap: wrap;
 }
 
-.description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
-  width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
+.container.light {
+  background-color: #fff;
+  color: #000;
 }
 
-.description a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
+.container.dark {
+  background-color: #333;
+  color: #fff;
 }
 
-.description p {
-  position: relative;
-  margin: 0;
-  padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
+.underline {
+  text-decoration: underline;
+  text-decoration-color: #333;
+  text-decoration-thickness: 2px; 
+  transition: color 0.7s ease;
 }
 
-.code {
-  font-weight: 700;
-  font-family: var(--font-mono);
+.underline:hover {
+  color: black;
+  text-decoration: underline;
+  text-decoration-thickness: 3px; 
 }
 
-.grid {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  max-width: 100%;
-  width: var(--max-width);
+.link {
+  color: inherit;
+  transition: color 0.3s ease;
 }
 
-.card {
-  padding: 1rem 1.2rem;
-  border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
-  transition: background 200ms, border 200ms;
+.link:hover {
+  color: #888;
+  text-decoration: underline;
 }
 
-.card span {
-  display: inline-block;
-  transition: transform 200ms;
-}
-
-.card h2 {
-  font-weight: 600;
-  margin-bottom: 0.7rem;
-}
-
-.card p {
-  margin: 0;
-  opacity: 0.6;
-  font-size: 0.9rem;
-  line-height: 1.5;
-  max-width: 30ch;
-}
-
-.center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  padding: 4rem 0;
-}
-
-.center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
-}
-
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
-}
-
-.center::before,
-.center::after {
-  content: '';
-  left: 50%;
-  position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
-}
-
-.logo {
-  position: relative;
-}
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  .card:hover {
-    background: rgba(var(--card-rgb), 0.1);
-    border: 1px solid rgba(var(--card-border-rgb), 0.15);
+@media (max-width: 768px) {
+  .container {
+    padding: 5% 0;
   }
 
-  .card:hover span {
-    transform: translateX(4px);
+  .textTitle {
+    font-size: calc(2.5em + 1vw);
+  }
+
+  .textBody {
+    font-size: calc(1em + 1vw);
+  }
+
+  .textLink {
+    gap: 0.5rem; 
   }
 }
 
-@media (prefers-reduced-motion) {
-  .card:hover span {
-    transform: none;
+@media (max-width: 480px) {
+  .container {
+    padding: 5% 5%; 
+  }
+
+  .textTitle {
+    font-size: calc(2.5em + 1vw);
+  }
+
+  .textBody {
+    font-size: calc(1em + 1vw);
+  }
+
+  .textLink {
+    flex-direction: row; 
+    align-items: flex-start;
   }
 }
 
-/* Mobile */
-@media (max-width: 700px) {
-  .content {
-    padding: 4rem;
-  }
-
-  .grid {
-    grid-template-columns: 1fr;
-    margin-bottom: 120px;
-    max-width: 320px;
-    text-align: center;
-  }
-
-  .card {
-    padding: 1rem 2.5rem;
-  }
-
-  .card h2 {
-    margin-bottom: 0.5rem;
-  }
-
-  .center {
-    padding: 8rem 0 6rem;
-  }
-
-  .center::before {
-    transform: none;
-    height: 300px;
-  }
-
-  .description {
-    font-size: 0.8rem;
-  }
-
-  .description a {
-    padding: 1rem;
-  }
-
-  .description p,
-  .description div {
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    width: 100%;
-  }
-
-  .description p {
-    align-items: center;
-    inset: 0 0 auto;
-    padding: 2rem 1rem 1.4rem;
-    border-radius: 0;
-    border: none;
-    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
-    background-clip: padding-box;
-    backdrop-filter: blur(24px);
-  }
-
-  .description div {
-    align-items: flex-end;
-    pointer-events: none;
-    inset: auto 0 0;
-    padding: 2rem;
-    height: 200px;
-    background: linear-gradient(
-      to bottom,
-      transparent 0%,
-      rgb(var(--background-end-rgb)) 40%
-    );
-    z-index: 1;
-  }
+/* Dark mode styles */
+.textTitleDark {
+  color: #E5E7EB;
 }
 
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-  .grid {
-    grid-template-columns: repeat(2, 50%);
-  }
+.textBodyDark {
+  color: #E5E7EB;
 }
 
-@media (prefers-color-scheme: dark) {
-  .vercelLogo {
-    filter: invert(1);
-  }
-
-  .logo {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-  }
+.underlineDark {
+  text-decoration-color: #D1D5DB;
 }
 
-@keyframes rotate {
-  from {
-    transform: rotate(360deg);
-  }
-  to {
-    transform: rotate(0deg);
-  }
-}
